--- a/package.json
+++ b/package.json
@@ -35,13 +35,8 @@
     "npm": ">= 6"
   },
   "dependencies": {
-    "@serenity-js/assertions": "^2.11.0",
-    "@serenity-js/core": "^2.11.0",
-    "@serenity-js/cucumber": "^2.11.0",
-    "@serenity-js/console-reporter": "^2.11.0",
-    "@serenity-js/protractor": "^2.11.0",
-    "@serenity-js/rest": "^2.11.0",
-    "@serenity-js/serenity-bdd": "^2.11.0",
+    "@serenity-js/cucumber": "^2.10.3",
+    "@serenity-js/protractor": "^2.10.3",
     "@types/cucumber": "^6.0.1",
     "@types/node": "^14.0.13",
     "axios": "^0.19.2",
@@ -55,5 +50,12 @@
     "tslint": "^6.1.2",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.9.5"
+  },
+  "devDependencies": {
+    "@serenity-js/assertions": "^2.11.0",
+    "@serenity-js/console-reporter": "^2.11.0",
+    "@serenity-js/core": "^2.11.0",
+    "@serenity-js/rest": "^2.11.0",
+    "@serenity-js/serenity-bdd": "^2.11.0"
   }
 }
